--- a/media/index.html
+++ b/media/index.html
@@ -23,7 +23,7 @@
 		@import url(./css/jquery.timeentry.css);
 	-->
 	</style>
-	<title>Triagem de Pacientes - Baseline (Hospitala)</title>
+	<title>Triagem de Pacientes - Baseline (Hospital)</title>
 </head>
 <body>
 	<div id='mainFrame'>
@@ -383,8 +383,8 @@
 						<input type="text" size="5" maxlength="5" class="number" name="pesoHabitual" id="pesoHabitual"/> Kg
 					</div>
 					<div id='divTempoEmagrecimento' class='secondary'>
-						<label for='tempoEmagrecimento'>Tempo de Emagrecimento:</label>
-						<input type="text" size="5" maxlength="5" class="number" name="tempoEmagrecimento" id="tempoEmagrecimento"/ > mes(es)
+						<label for='tempoEmagrecimentoSemanas'>Tempo de Emagrecimento:</label>
+						<input type="text" size="5" maxlength="5" class="number" name="tempoEmagrecimentoSemanas" id="tempoEmagrecimentoSemanas"/ > semana(s)
 					</div>
 					<div id='divEmagrecimento' class='primary'>
 						<label for='emagrecimento'>Emagrecimento:</label>
