Consertando atributo "name" do campo "Uso de anti-retroviral" de 	'sida' para 'sidaUsoAntiRetroviral'

--- a/media/index.html
+++ b/media/index.html
@@ -1017,7 +1017,7 @@
 					</div>
 					<div id='divSIDAUsoAntiRetroviral' class='secondary'>
 						<label for='sidaUsoAntiRetroviral'> Uso de anti-retroviral? </label>
-						<select name='sida' id='sidaUsoAntiRetroviral' class='selectOne required'>
+						<select name='sidaUsoAntiRetroviral' id='sidaUsoAntiRetroviral' class='selectOne required'>
 							<option value='ignorado' selected> Ignorado  </option>
 							<option value='sim'> Sim  </option>
 							<option value='nao'> N&atilde;o  </option>
