Permitindo inserção de número decimal para perguntas "Peso atual" e 	"Peso habitual";

--- a/media/index.html
+++ b/media/index.html
@@ -379,11 +379,11 @@
 					</div>
 					<div class="primary" id="divPesoAtual">
 						<label for="pesoAtual">Peso atual:</label>
-						<input type="text" size="5" maxlength="5" class="number" name="pesoAtual" id="pesoAtual"/> Kg
+						<input type="text" size="5" maxlength="5" class="floatNumber" name="pesoAtual" id="pesoAtual"/> Kg
 					</div>
 					<div class="primary" id="divPesoHabitual">
 						<label for="pesoHabitual">Peso Habitual:</label>
-						<input type="text" size="5" maxlength="5" class="number" name="pesoHabitual" id="pesoHabitual"/> Kg
+						<input type="text" size="5" maxlength="5" class="floatNumber" name="pesoHabitual" id="pesoHabitual"/> Kg
 					</div>
 					<div id='divTempoEmagrecimento' class='secondary'>
 						<label for='tempoEmagrecimentoSemanas'>Tempo de Emagrecimento:</label>
